# tanka

./: .flake8  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  tox.ini
docs/: jax.md  tanka.md
dot-example/: 01.dot
examples/: compute_grad_in_grad.py  linear_regression.py  model2dot.py  optimize_using_newton.py  plot_cos.py  plot_higher_order_derivative.py
scripts/: install.sh
tanka/: __init__.py  config.py  functions.py  numerical.py  predule.py  typing.py
tanka/functions/: __init__.py  algebra.py  geometry.py  matrix.py  shape.py
tanka/graphic/: __init__.py  dot.py
tanka/testing/: __init__.py  jax.py
tanka/utility/: __init__.py  shape.py
test/tanka/: predule_test.py
tests/: test_jax_playground.py
tests/fundamental/: context.py  ref_count.py  rmul.py  weak_ref.py
tests/fundamental/math/: maclaurin.py
tests/tanka/: test_config.py  test_functions.py  test_geometry.py  test_matrix.py  test_optimization.py  test_predule.py  test_tensor.py
tutorials/: 01_multiply_matrix.py
tutorials/haiku/: __init__.py
tutorials/jax/: 01_multiply_matrix.py  02_jit.py  03_grad.py  04_vmap.py  05_advanced_grad.py
tutorials/utility/: timer.py
