[tool.poetry]
name = "jax-playground"
version = "0.1.0"
description = ""
authors = ["ashigirl96 <reon@mma.cs.tsukuba.ac.jp>"]
packages = [
    { include="tutorials", from="." }
]

[tool.poe.tasks]
fix = "pre-commit run --all-files"

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.1"
jaxlib = "^0.1.55"
dm-haiku = "^0.0.2"
chex = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^5.5.3"
pre-commit = "^2.7.1"
autoflake = "^1.4"
poethepoet = "^0.8.0"
ptpython = "^3.0.7"

[tool.black]
line-length = 99
exclude = '''
(
    .py_cache
    |.pytest_cache
    |.tox
    |venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
