[tool.poetry]
name = "jax-playground"
version = "0.1.0"
description = ""
authors = ["ashigirl96 <reon@mma.cs.tsukuba.ac.jp>"]
packages = [
    { include = "tutorials", from = "." },
    { include = "tanka", from = "tanka" }
]

[tool.poe.tasks]
fix = "pre-commit run --all-files"
mypy = "mypy tanka --config-file ./mypy.ini"
test = "pytest"
#mksandwich = { script = "my_package.sandwich:build" }                 # python script based task
#tunnel     = { shell = "ssh -N -L 0.0.0.0:8080:$PROD:8080 $PROD &" }  # shell script based task

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.2.5"
jaxlib = "^0.1.56"
dm-haiku = "^0.0.2"
chex = "^0.0.2"
tensorflow-datasets = "^4.1.0"
tensorflow = "^2.3.1"
memory-profiler = "^0.58.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = "^5.6.4"
pre-commit = "^2.8.2"
autoflake = "^1.4"
poethepoet = "^0.9.0"
ptpython = "^3.0.7"

[tool.black]
line-length = 99
exclude = '''
(
    .py_cache
    |.pytest_cache
    |.tox
    |venv
)
'''

[tool.isort]
include_trailing_comma = true
line_length = 99
multi_line_output = 3
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
